# Guard

./: Cargo.toml  README.md  deploy.sh  dfx.json  package-lock.json  package.json
src/myGuard_backend/: Cargo.toml  myGuard_backend.did
src/myGuard_backend/src/: contract_dataset_100_unique.csv  lib.rs
src/myGuard_frontend/: index.html  package.json
src/myGuard_frontend/public/: .ic-assets.json5
src/myGuard_frontend/src/: App.jsx  index.scss
src/myGuard_frontend/src/components/: ContractChat.jsx  LoginModal.jsx  UserProfileMenu.jsx
src/myGuard_frontend/src/context/: AuthContext.jsx
src/myGuard_frontend/src/services/: auth.js
