[package]
name = "myGuard_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
serde_json = "1.0"
#candle-core = "0.3"
#candle-transformers = "0.3"
#tokenizers = "0.13"